--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <p>this is new repo</p>
-<p>This is a new feature which is added in feature1</p>
+<p>This is a new feature which is added in feature1(button)</p>
